--- a/Pandoc-UI/Pandoc-UI.csproj
+++ b/Pandoc-UI/Pandoc-UI.csproj
@@ -93,5 +93,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FileConvert\FileConvert.csproj">
+      <Project>{35999751-6f0b-4223-90c3-c324a6b00092}</Project>
+      <Name>FileConvert</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
