--- a/FileConvert/FileConvert.csproj
+++ b/FileConvert/FileConvert.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Native.cs" />
     <Compile Include="Pandoc.cs" />
     <Compile Include="PandocFile.cs" />
+    <Compile Include="Preset.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
